# ExampleFastAPIProject

./: README.md  db.py  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 2023_11_07_1617-e4c589487418_create_user_table.py
auth/: __init__.py  exceptions.py  schemas.py  services.py  utils.py  views.py
tests/: db.py
users/: crud.py  models.py  schemas.py  services.py  views.py
users/tests/: test_crud.py
