[tool.poetry]
name = "examplefastapiproject"
version = "0.1.0"
description = ""
authors = ["PolyakovDmitry546 <65275577+PolyakovDmitry546@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
pep8-naming = "^0.13.3"
flake8-commas = "^2.1.0"
flake8-import-order = "^0.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
