[tool.poetry]
name = "examplefastapiproject"
version = "0.1.0"
description = ""
authors = ["PolyakovDmitry546 <65275577+PolyakovDmitry546@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.22"}
aiosqlite = "^0.19.0"
pydantic = {extras = ["email"], version = "^2.4.2"}
alembic = "^1.12.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
pep8-naming = "^0.13.3"
flake8-commas = "^2.1.0"
flake8-import-order = "^0.18.2"
httpx = "^0.25.1"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"